UI AND UX Changed

--- a/index.html
+++ b/index.html
@@ -12,15 +12,27 @@
 
 <!-- Boxes -->
 <center>
-    <img class="head" src="OIP.jpg" alt="">
-    <h1 class="box1">SamplePaper</h1>
-    <h1 class="box2">AnswerSheet</h1>
-    <H1 class="box3">English</H1>
-    <h1 class="box4">Hindi</h1>
-   <a  style="text-decoration: none;" href="books.html"> <h1 id="BOX5" class="box4">Free <br> EBOOKS</h1></a>
+    <img class="head" src="OIP.jpg" alt=""> <br> <br> <br>
+    <img class="head" src="samplepaper.gif" alt=""> <br> <br> <br>
+    <a href="books.html">
+    <img class="head" src="BOOKSgif.gif" alt=""> </a><br> <br> <br>
+
+<!-- <Fieldset> -->
+<!-- <form action="">
+    <input type="email" placeholder="Subscribe to newsletter"><br>
+    <br>
+    <button> SUBSCRIBE </button>
+</form>
+</Fieldset>
+<BR>
+</BR> -->
+
+
+    <img class="head" src="FOOTER.gif" alt=""> <br> <br> <br>
 
     
-
+   
+    
 </center>
 
 
